serve static images

--- a/fastapi/templates/index.html
+++ b/fastapi/templates/index.html
@@ -11,7 +11,7 @@
         <h1>Bienvenue au Magasin de Vélo</h1>
         <nav>
             <a href="/">Accueil</a>
-            <a href="/products">Produits</a>
+            <a href="/products_page">Produits</a>
             <a href="/contact">Contact</a>
         </nav>
     </header>
